[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-post-backend"
version = "2.0.0"
description = "OmniPost Backend - Multi-platform content publishing service powered by Flask and Playwright"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.13.3",
    "Flask[async]==3.1.1",
    "flask-cors==6.0.0",
    "playwright>=1.50.0",
    "requests==2.32.4",
    "tenacity>=9.0.0",
    "Pillow>=11.0.0",
    "pycryptodome>=3.20.0",
    "qrcode>=8.0",
    "xhs>=0.2.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "freezegun>=1.2.0",
    "pytest-timeout>=2.1.0",
    "pytest-env>=0.8.1",
    "black>=24.0.0",
    "isort>=5.0.0",
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["src*"]}}

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
